--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@ Email: <a href="mailto:nestingrealmsmodel@gmail.com">nestingrealmsmodel@gmail.co
 
 <h2>Downloads</h2>
 <ul>
+
+  <li><a href="https://github.com/NRMLC-Hub/Ai-Superconductivity-Recursive-Compute" target="_blank">View Full SPU Repository</a>
+  <li><a href="https://github.com/NRMLC-Hub/Ai-Superconductivity-Recursive-Compute/blob/main/SPU-SC_Schematic.png" target="_blank">SPU Architecture Diagram</a>
+  <li><a href="https://github.com/NRMLC-Hub/Ai-Superconductivity-Recursive-Compute/blob/main/ULTRACORE-SPU_WhitePaper_Draft_v3_PROTECTED.docx" target="_blank">White Paper (Protected)</a>
   <li><a href="NRMLC_Public_White_Paper.docx">White Paper</a></li>
   <li><a href="NRMLC_One_Page_Pitch.pdf">One-Page Pitch</a></li>
   <li><a href="AgentCore.phx">Symbolic Agent Demo (.phx)</a></li>
