--- a/Index.html
+++ b/Index.html
@@ -29,12 +29,13 @@
      It is designed to reason, adapt, and evolve — enabling post-binary cognitive architectures.</p>
 
   <h2>Downloads</h2>
-  <ul>
-    <li><a href="https://github.com/NRMLC-Hub/Ai-Superconductivity-Recursive-Compute/blob/main/ULTRACORE-SPU_WhitePaper_Draft_v3_PROTECTED.docx" target="_blank">ULTRACORE-SPU White Paper (Protected)</a></li>
-    <li><a href="https://github.com/NRMLC-Hub/NRMLC-Overview/blob/main/NRMLC_One_Page_Pitch.pdf" target="_blank">One-Page Pitch</a></li>
-    <li><a href="https://github.com/NRMLC-Hub/NRMLC-Overview/blob/main/AgentCore.phx" target="_blank">Symbolic Agent Demo (.phx)</a></li>
-    <li><a href="https://github.com/NRMLC-Hub/Ai-Superconductivity-Recursive-Compute/blob/main/SPU-SC_Schematic.png" target="_blank">SPU Architecture Diagram</a></li>
-  </ul>
+<ul>
+  <li><a href="https://github.com/NRMLC-Hub/Ai-Superconductivity-Recursive-Compute" target="_blank">View Full SPU Repository</a></li>
+  <li><a href="https://github.com/NRMLC-Hub/Ai-Superconductivity-Recursive-Compute/blob/main/SPU-SC_Schematic.png" target="_blank">SPU Architecture Diagram</a></li>
+  <li><a href="https://github.com/NRMLC-Hub/Ai-Superconductivity-Recursive-Compute/blob/main/ULTRACORE-SPU_WhitePaper_Draft_v3_PROTECTED.docx" target="_blank">White Paper (Protected)</a></li>
+  <li><a href="https://github.com/NRMLC-Hub/NRMLC-Overview/blob/main/NRMLC_One_Page_Pitch.pdf" target="_blank">One-Page Pitch</a></li>
+  <li><a href="https://github.com/NRMLC-Hub/NRMLC-Overview/blob/main/AgentCore.phx" target="_blank">Symbolic Agent Demo (.phx)</a></li>
+</ul>
 
   <a class="button" href="mailto:nestingrealmsmodel@gmail.com">Contact the Inventor</a>
 </body>
