--- a/index.html
+++ b/index.html
@@ -32,11 +32,7 @@
 
   <h2>Downloads</h2>
   <ul>
-    <li><a href="https://github.com/NRMLC-Hub/Ai-Superconductivity-Recursive-Compute" target="_blank">View Full SPU Repository</a></li>
-    <li><a href="https://github.com/NRMLC-Hub/Ai-Superconductivity-Recursive-Compute/blob/main/NRMLC_SPU_Architecture_Diagram.png" target="_blank">SPU Architecture Diagram</a></li>
-    <li><a href="https://github.com/NRMLC-Hub/Ai-Superconductivity-Recursive-Compute/blob/main/ULTRACORE-SPU_WhitePaper_Draft_v3_PROTECTED.docx" target="_blank">ULTRACORE-SPU White Paper (Protected)</a></li>
-    <li><a href="https://github.com/NRMLC-Hub/NRMLC-Overview/blob/main/NRMLC_One_Page_Pitch.pdf" target="_blank">One-Page Pitch</a></li>
-    <li><a href="https://github.com/NRMLC-Hub/NRMLC-Overview/blob/main/AgentCore.phx" target="_blank">Symbolic Agent Demo (.phx)</a></li>
+   ULTRACORE-SPU_WhitePaper_Draft_v3_PROTECTED.docx
   </ul>
 
   <a class="button" href="mailto:nestingrealmsmodel@gmail.com">Contact the Inventor</a>
