--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 
   <h2>Downloads</h2>
   <ul>
-   
+    <a href="https://github.com/NRMLC-Hub/NRMLC-Overview/blob/main/NRMLC_Public_White_Paper.docx" target="_blank">NRMLC White Paper</a>
+    <a href="https://github.com/NRMLC-Hub/NRMLC-Overview/blob/main/ULTRACORE-SPU_WhitePaper_Draft_v3_PROTECTED.docx" target="_blank">ULTRACORE-SPU White Paper</a>
   </ul>
 
   <a class="button" href="mailto:nestingrealmsmodel@gmail.com">Contact the Inventor</a>
