--- a/index.html
+++ b/index.html
@@ -1,24 +1,13 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-  <title>NRMLC: Nesting Recursive Model Logic Computer</title>
+  <title>NRMLC: Symbolic Logic System</title>
   <style>
-    body { font-family: Arial, sans-serif; padding: 40px; max-width: 800px; margin: auto; background: #fefefe; color: #111; }
+    body { font-family: Arial, sans-serif; padding: 40px; max-width: 800px; margin: auto; background: #fff; color: #111; }
     h1 { font-size: 2em; }
-    h2 { margin-top: 1.5em; }
-    ul { line-height: 1.8em; }
+    ul { margin-top: 1em; line-height: 1.6em; }
     a { color: #1a0dab; text-decoration: none; }
     a:hover { text-decoration: underline; }
-    .button {
-      display: inline-block;
-      padding: 10px 20px;
-      margin-top: 20px;
-      background-color: black;
-      color: white;
-      text-decoration: none;
-      border-radius: 5px;
-    }
   </style>
 </head>
 <body>
@@ -26,16 +15,10 @@
   <p><strong>Inventor:</strong> Martin Bradford Hovsepian Jr.<br>
      <strong>Email:</strong> <a href="mailto:nestingrealmsmodel@gmail.com">nestingrealmsmodel@gmail.com</a></p>
 
-  <h2>Overview</h2>
-  <p>NRMLC is a symbolic computing model that replaces binary logic with signal strength, recursive memory, and decay-based computation.
-     It is designed to reason, adapt, and evolve — enabling post-binary cognitive architectures.</p>
-
-  <h2>Downloads</h2>
+  <h2>White Papers</h2>
   <ul>
-    <a href="https://github.com/NRMLC-Hub/NRMLC-Overview/blob/main/NRMLC_Public_White_Paper.docx" target="_blank">NRMLC White Paper</a>
-    <a href="https://github.com/NRMLC-Hub/NRMLC-Overview/blob/main/ULTRACORE-SPU_WhitePaper_Draft_v3_PROTECTED.docx" target="_blank">ULTRACORE-SPU White Paper</a>
+    <li><a href="https://github.com/NRMLC-Hub/NRMLC-Overview/blob/main/NRMLC_Public_White_Paper.docx" target="_blank">NRMLC White Paper</a></li>
+    <li><a href="https://github.com/NRMLC-Hub/NRMLC-Overview/blob/main/ULTRACORE-SPU_WhitePaper_Draft_v3_PROTECTED.docx" target="_blank">ULTRACORE-SPU White Paper</a></li>
   </ul>
-
-  <a class="button" href="mailto:nestingrealmsmodel@gmail.com">Contact the Inventor</a>
 </body>
 </html>
